import * as React from 'react';
import { TaskList, TaskNew, TaskDetails, TaskEdit } from '../src/task-components';
import { shallow } from 'enzyme';
import { Form, Button, Column, Row, Card, Alert } from '../src/widgets';
import { NavLink } from 'react-router-dom';
import taskService from '../src/task-service';

//npm test -- -i task-components.test.tsx

jest.mock('../src/task-service', () => {
  class TaskService {
    getAll() {
      return Promise.resolve([
        {
          id: 1,
          title: 'Les leksjon',
          description: 'Notater fra leksjon den 25.09.24',
          done: false,
        },
        { id: 2, title: 'Møt opp på forelesning', description: '', done: false },
        { id: 3, title: 'Gjør øving', description: '', done: false },
      ]);
    }

    get() {
      return Promise.resolve({
        id: 1,
        title: 'Les leksjon',
        description: 'Notater fra leksjon den 25.09.24',
        done: false,
      });
    }

    create() {
      return Promise.resolve(4); // Same as: return new Promise((resolve) => resolve(4));
    }

    update() {
      return Promise.resolve();
    }

    delete() {
      return Promise.resolve();
    }
  }

  return new TaskService();
});

describe('Task component tests', () => {
  test('TaskList draws correctly', (done) => {
    const wrapper = shallow(<TaskList />);

    // Wait for events to complete
    setTimeout(() => {
      expect(
        wrapper.containsAllMatchingElements([
          <NavLink to="/tasks/1">Les leksjon</NavLink>,
          <NavLink to="/tasks/2">Møt opp på forelesning</NavLink>,
          <NavLink to="/tasks/3">Gjør øving</NavLink>,
        ]),
      ).toEqual(true);
      done();
    });
  });

  test('TaskList click on New task', (done) => {
    const wrapper = shallow(<TaskList />);

    wrapper.find(Button.Success).simulate('click');
    expect(location.hash).toEqual('#/tasks/new');
    done();
  });

  test('TaskNew correctly sets location on create', (done) => {
    const wrapper = shallow(<TaskNew />);

    wrapper.find(Form.Input).simulate('change', { currentTarget: { value: 'Kaffepause' } });
    // @ts-ignore
    expect(wrapper.containsMatchingElement(<Form.Input value="Kaffepause" />)).toEqual(true);

    wrapper.find(Button.Success).simulate('click');
    // Wait for events to complete
    setTimeout(() => {
      expect(location.hash).toEqual('#/tasks/4');
      done();
    });
  });
});

describe('TaskDetails tests', () => {
  test('TaskDetails renders correctly', (done) => {
    const wrapper = shallow(<TaskDetails match={{ params: { id: 1 } }} />);

    setTimeout(() => {
      wrapper.update(); // Ensure the component is updated

      console.log(wrapper.debug()); // Debug the rendered output

      // @ts-ignore
      expect(
        wrapper.containsAllMatchingElements([
          <Card title="Task">
            <Row>
              <Column width={2}>Title:</Column>
              <Column>Les leksjon</Column>
            </Row>
            <Row>
              <Column width={2}>Description:</Column>
              <Column>Notater fra leksjon den 25.09.24</Column>
            </Row>
            <Row>
              <Column width={2}>Done:</Column>
              <Column>
                <Form.Checkbox checked={false} />
              </Column>
            </Row>
          </Card>,
          <Button.Success>Edit</Button.Success>,
        ]),
      ).toEqual(true);
      done();
    }, 0);
  });
});

describe('TaskDetails renders correctly with use of snapshot', () => {
  test('Renders correctly', () => {
    const wrapper = shallow(<TaskDetails match={{ params: { id: 1 } }} />);

    setTimeout(() => {
      wrapper.update();

      expect(wrapper).toMatchSnapshot();
    }, 0);
  });
});

describe('TaskEdit tests', () => {

test('TaskEdit renders correctly', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);

    setTimeout(() => {
      wrapper.update(); // Ensure the component is updated

      // @ts-ignore
      expect(
        wrapper.containsAllMatchingElements([
          <Card title="Edit task">
            <Form.Input value="Les leksjon" />,
            <Form.Input value="Notater fra leksjon den 25.09.24" />,
            <Form.Checkbox checked={false} />,
          </Card>,
          <Button.Success>Save</Button.Success>,
        ]),
      ).toEqual(false);
      done();
    }, 0);
  });

  test('TaskEdit correctly sets location on update', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);

    setTimeout(() => {
      wrapper.update();

      wrapper.find(Button.Success).simulate('click');
      expect(location.hash).toEqual('#/tasks/4');
      done();
    }, 0);
  });

  test('TaskEdit change done', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);

    setTimeout(() => {
      wrapper.update();

      wrapper.find(Form.Checkbox).simulate('change', { currentTarget: { checked: false } });
      expect(wrapper.find(Form.Checkbox).prop('checked')).toEqual(false);
      done();
    }, 0);
  });

  test('TaskEdit Edit button click', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);

    setTimeout(() => {
      wrapper.update(); // Ensure the component is updated

      wrapper.find(Button.Success).simulate('click');
      expect(location.hash).toEqual('#/tasks/1');
      done();
    }, 0);
  });

  test('TaskEdit colunm width', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);

    setTimeout(() => {
      wrapper.update(); // Ensure the component is updated

      expect(wrapper.containsMatchingElement(<Column width={2}>Title:</Column>)).toEqual(false);
      done();
    }, 0);
  });


  test('TaskEdit delete button click', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);

    setTimeout(() => {
      wrapper.update(); // Ensure the component is updated

      wrapper.find(Button.Danger).simulate('click');
      expect(location.hash).toEqual('#/tasks/1');
      done();
    }, 0);
  });

  test('TaskEdit Save button click', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);
    setTimeout(() => {
      wrapper.update(); // Ensure the component is updated

      wrapper.find(Button.Success).simulate('click');
      expect(location.hash).toEqual('#/tasks/1');
      done();
    }, 0);
  });

  test('TaskEdit strecth text area', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);
    setTimeout(() => {
      wrapper.update(); // Ensure the component is updated

      expect(wrapper.containsMatchingElement(<Form.Textarea rows={10} />)).toEqual(true);
      done();
    }, 0);
  });

  test('TaskEdit change title', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);
    setTimeout(() => {
      wrapper.update(); // Ensure the component is updated

      wrapper.find(Form.Input).simulate('change', { currentTarget: { value: 'Kaffepause' } });
      expect(wrapper.find(Form.Input).prop('value')).toEqual('Kaffepause');
      done();
    }, 0);
  });
});



describe('TaskEdit renders correctly with use of snapshot', () => {
  test('TaskEdit renders correctly with use of snapshot', (done) => {
    const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);

    setTimeout(() => {
      wrapper.update();

     // @ts-ignore
      expect(wrapper).toMatchSnapshot('before-edit-click');

      wrapper.find(Button.Success).simulate('click');

  // @ts-ignore
      expect(wrapper).toMatchSnapshot('after-edit-click');

      expect(location.hash).toEqual('#/tasks/1');
      done();
    }, 0);
  });
});

test('TaskEdit save changes correctly', (done) => {
  const wrapper = shallow(<TaskEdit match={{ params: { id: 1 } }} />);

  setTimeout(() => {
    wrapper.update();

    // @ts-ignore
    expect(wrapper).toMatchSnapshot('before-edit-click');

    wrapper.find(Button.Success).simulate('click');

    // @ts-ignore
    expect(wrapper).toMatchSnapshot('after-edit-click');

    expect(location.hash).toEqual('#/tasks/1');
    done();
  }, 0);
});